@@ -1,7 +1,8 @@
 Fri Nov  8 16:35:19 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>
 
-	* xe_check.adb: Check that partition name does not conflict
-	with other ada units (not present in the configuration file).
+	* xe_check.adb: Check that partition name does not conflict with
+ 	any other ada units (not present in the configuration file).
+	
 
 	* xe_parse.adb, xe.ads, xe.adb: Add some stuff to store SLOC on a
 	GNATDIST node.
